<resources>
    <string name="app_name">My Application</string>
    <string name="My_app">App</string>
    <string name="index">index</string>
    <string name="textview">TextView</string>
    <string name="Confir_pass">Confirmar Contrseña</string>
    <string name="pass">Contraseña</string>
    <string name="emal">Correo Electronico</string>
    <string name="name">Nombre</string>
    <string name="Regis">Registrar</string>
    <string name="join">Iniciar sesión</string>
    <string name="home">Home</string>
    <string name="wellcome">Bienvenido a Mi Aplicación</string>
    <string name="logo">logo de la IU digital</string>
    <string name="i_wellcome">Has iniciado sesión</string>
    <string name="call">llamar</string>
    <string name="list">Usuarios Registrados\n</string>
</resources>