<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:hint="@string/emal"
            android:layout_height="@android:dimen/app_icon_size" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:layout_height="@android:dimen/app_icon_size" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:text="@string/join"
            android:layout_height="@android:dimen/app_icon_size"/>

        <Button
            android:id="@+id/goToRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Regis" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>